src/test/deca/context/valid/created/testOpComp/GreaterOrEq.deca
// Description :
//    Test de l'opérateur de comparaison >=
//
// Résultats :
//    ok


{
    int x = 1;
    int y = 2;
    boolean z1 = x >= y;
    boolean z2 = x >= 1;
}
